<resources>
    <string name="app_name">tour</string>

    <string name="hello_world">Hello world!</string>
    <string name="welcome_text">Welcome to tour!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number_hint">type your number....</string>
    <string name="phone_number_button_text">next</string>
    <string name="user_first_name_hint">first name ex:John</string>
    <string name="user_details">Your Details...</string>
    <string name="user_last_name_hint">last name ex: Doe</string>
</resources>
