<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:weightSum="10"
    android:padding="10dp"        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/user_details"
        android:textSize="30dp"
        android:textColor="@color/welcome_text_color"
        android:gravity="center"  />
    <EditText
        android:id="@+id/user_first_name"
        android:hint="@string/user_first_name_hint"
        android:gravity="left"
        android:inputType="textPersonName"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="@color/welcome_text_color"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/user_last_name"
        android:hint="@string/user_last_name_hint"
        android:gravity="left"
        android:inputType="textPersonName"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/welcome_text_color"
        android:textSize="25dp" />










</LinearLayout>