<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/grey_background"
    android:weightSum="10"
    tools:context=".MainActivity">

    <TextView android:text="@string/welcome_text"
        android:textColor="@color/welcome_text_color"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <EditText
        android:id="@+id/phone_number"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:textSize="20dp"
        android:textColor="@color/welcome_text_color"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"  />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"  />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number_button"
        android:layout_gravity="right"
        android:textColor="@color/button_text_color"
        android:text="@string/phone_number_button_text"
        android:textSize="15dp"
        android:onClick="phone_number_clicked" />



</LinearLayout>
